C2 Ex 4 Making Tep Conv User Friendly

--- a/ch2_examp4.html
+++ b/ch2_examp4.html
@@ -13,7 +13,7 @@
 	
 	degCent = 5/9 * (degFahren - 32);
 	
-	alert(degCent);
+	alert(degFahren + "\xB0 Fahrenheit is " + degCent + "\xB0 centigrade");
 	
 	</script>
     
