Ch2 Ex 7 I'm not a number

--- a/ch2_examp7.html
+++ b/ch2_examp7.html
@@ -7,7 +7,7 @@
 
 <body>
 	<script type="text/javascript">
-	var myString = "56.02 degrees centigrade";
+	var myString = "I'm not a number";
 	var myInt;
 	var myFloat;
 	
