--- a/AssociatingJS/Conditionals_Wacky/index.html
+++ b/AssociatingJS/Conditionals_Wacky/index.html
@@ -2,7 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 <title>Conditionals Wacky</title>
+
+<link rel="stylesheet" href="css/styles.css" type="text/css" />
+
 </head>
 
 <body>
