Add JS Script to Dog Age index

--- a/AssociatingJS/Expressions_worksheet/Mason_Juan_Dog_Years/index.html
+++ b/AssociatingJS/Expressions_worksheet/Mason_Juan_Dog_Years/index.html
@@ -5,6 +5,9 @@
 <title>Mason_Juan_Dog_Age 06/10/13</title>
 </head>
 
+
 <body>
+
+<script type="text/javascript" src="js/script.js"</script>
 </body>
 </html>
