Added my name and date to the index

--- a/AssociatingJS/Expressions_Industry/Index.html
+++ b/AssociatingJS/Expressions_Industry/Index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Expressions Industry</title>
+	<title>Mason_Juan 06/13/13 Expressions Industry</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 
