--- a/AssociatingJS/Expressions_Personal/Index.html
+++ b/AssociatingJS/Expressions_Personal/Index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<script src="js/script.js" src = "js/srcipt.js"></script>
+	<script type="text/javascript" src = "js/script.js"></script>
     
 </body>
 </html>
