Add to title of index

--- a/AssociatingJS/Conditionals/Conditionals_Industry/index.html
+++ b/AssociatingJS/Conditionals/Conditionals_Industry/index.html
@@ -2,7 +2,7 @@
 <head>
 
 
-	<title>Mason_Juan 06/19/13 Conditionals Industry</title>
+	<title>Mason_Juan 06/19/13 Conditionals Industry - JAM Mix Tape CD</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 
